src/objects/CventEvents__AttendeeActionStatusMap__mdt.object
<CustomObject>
    <description>This represents a map of Attendee statuses to the Actions (Registration, Nomination, Invitation) that are available.</description>
    <fields>
        <fullName>CventEvents__AllowInvitation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the invitation of an attendee in this status is allowed.</description>
        <label>Allow Invitation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__AllowModifyCancel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the modification of an attendee in this status is allowed.</description>
        <label>Allow Modify/Cancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__AllowNomination__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the nomination of an attendee in this status is allowed.</description>
        <label>Allow Nomination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__AllowRegistration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the registration of an attendee in this status is allowed.</description>
        <label>Allow Registration</label>
        <type>Checkbox</type>
    </fields>
    <label>Attendee Action Status Map</label>
    <listViews>
        <fullName>CventEvents__AttendeeActionStatusMaps</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>CventEvents__AllowInvitation__c</columns>
        <columns>CventEvents__AllowRegistration__c</columns>
        <columns>CventEvents__AllowModifyCancel__c</columns>
        <columns>CventEvents__AllowNomination__c</columns>
        <filterScope>Everything</filterScope>
        <label>Attendee Action Status Maps</label>
    </listViews>
    <pluralLabel>Attendee Action Status Maps</pluralLabel>
</CustomObject>